2004-08-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/output-def.cc (assign_context_def): use set_variable().

	* lily/text-item.cc (interpret_string): accept string input
	encoding too.

	* scm/encoding.scm (read-encoding-file): print warning when file
	can't be found.

	* tex/latin1.enc: remove.

	* tex/GNUmakefile ($(outdir)/latin1.enc): create latin1 from GS.

	* lily/rod.cc (columnize): robustness fix. Don't crash for
	nil span points. Fixes: appoggiatura-segfault.ly
	(add_to_cols): extra robustness fix.

2004-08-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/text-item.cc (interpret_string): use lookup_variable() to
	fidn inputencoding. Now, \paper inherits inputencoding from
	\bookpaper.

	* lily/script-engraver.cc (stop_translation_timestep): remove slur
	collision kludge.

	* lily/dynamic-engraver.cc (typeset_all): remove slur collision
	kludge.

2004-08-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (parse_argv): Bugfix: handle 'p'.  Add warning.

2004-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/spanner.cc (spanned_rank_iv): Bugfix.

	* lily.scm: Mark un-internationlised user messages (with FIXME).

	* lily/include/modified-font-metric.hh (struct
	Modified_font_metric): New file.  (WAS: incorrectly named
	scaled-font-metric.hh ?)

	* lily/include/scaled-font-metric.hh: Remove.

	* lily/text-item.cc (interpret_string): Identify and document
	input-encoding problem.

	* lily/paper-book.cc (pages): Do not use `paper' as variable name
	for a Bookpaper.

	* tex/latin1.enc: Replace /minus with /hyphen.

	* scm/encoding.scm: For latin1 (input-)encoding, use
	latin1.  (Cork.enc is NOT latin1 -- see man latin1).

	* ly/book-paper-defaults.ly: Add a comment about suspicious TeX
	inputencoding.

2004-08-12  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/INSTALL.html: fixes.

2004-08-12  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>

	* buildscripts/builder.py: Fix for scons CVS.
